{
    "name": "TankInputActions",
    "maps": [
        {
            "name": "TankControl",
            "id": "5d26f70f-155d-46f2-83fa-11680c501889",
            "actions": [
                {
                    "name": "BodyMovement",
                    "type": "Value",
                    "id": "e9a8262c-a071-4833-a8ef-1c47e6189bca",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TurretMovement_Mouse",
                    "type": "Value",
                    "id": "3deba12a-8d21-4338-8669-6f7c82784a64",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TurretMovement_Stick",
                    "type": "Value",
                    "id": "e3834e7e-ea4a-4725-8994-69f9afcc1b26",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ff38da97-5b5c-4c2a-93df-18f27743fe9f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BodyMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9671defe-5d22-48da-bf18-e6566a24874b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard+Mouse",
                    "action": "BodyMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a19b0d28-2f6d-4494-abc9-38fc05222e65",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard+Mouse",
                    "action": "BodyMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "da1cfadd-bc84-4239-9d95-b108e91a2a93",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard+Mouse",
                    "action": "BodyMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a9ae406c-b749-448b-8b0b-65723b00c698",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard+Mouse",
                    "action": "BodyMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1fdc7791-3616-4a98-97a2-47200bf85a3b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BodyMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f57ee9b-17a2-45e2-bedf-f7ca4e547a2a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard+Mouse",
                    "action": "TurretMovement_Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ab46186-67bd-4b96-a1f7-47d8410ff1ba",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "TurretMovement_Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard+Mouse",
            "bindingGroup": "Keyboard+Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}